Fix colors not respecting transparency
It seems the default opacity is around 0.5. Setting it to 1.0 and then
using rgba() seems like a more solid approach.

--- a/GoogleMapsEverywhere/src/main/res/values/strings_js.xml
+++ b/GoogleMapsEverywhere/src/main/res/values/strings_js.xml
@@ -76,8 +76,10 @@
                 center: %2$s,
                 radius: %3$s,
                 fillColor: \"%4$s\",
+                fillOpacity: 1.0,
                 strokeWeight: %5$s,
                 strokeColor: \"%6$s\",
+                strokeOpacity: 1.0,
                 clickable: false
             });
     </string>
