Fix GMaps glitches on changes in Oldroids
The old WebView implementation doesn’t refresh the tiles properly when
changes occur. Hack around it.

--- a/GoogleMapsEverywhere/src/main/res/values/strings_js.xml
+++ b/GoogleMapsEverywhere/src/main/res/values/strings_js.xml
@@ -63,6 +63,11 @@
         google.maps.event.trigger(window.map, \'resize\');
     </string>
 
+    <string name="refresh_on_oldroids_hack">
+        window.map.setZoom(window.map.getZoom() - 1);
+        window.map.setZoom(window.map.getZoom() + 1);
+    </string>
+
     <string name="show_my_location_enable_js" translatable="false">
         window.objects[%1$d] =
             new google.maps.Marker({
